Release 1.1.87.7 (#8)
* Release 1.1.87.7

* hotfix

Co-authored-by: akorczak <antoni.korczak-komorowski@intel.com>